--- a/.travis.yml
+++ b/.travis.yml
@@ -3,18 +3,15 @@ language: python
 cache: pip
 
 python:
+  - 3.4
   - 3.5
   - 3.6
 
 install:
-  - pip install tox
-  - pip install coveralls
+  - pip install tox-travis
 
 script:
     - tox
-
-after_success:
-  - coveralls
 
 notifications:
   email: false
