--- a/tox.ini
+++ b/tox.ini
@@ -4,15 +4,22 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py35, py36, docs
+envlist = py{34,35,36}, docs, coveralls
 
 [testenv]
+passenv =
+    TRAVIS
+    TRAVIS_JOB_ID
+    TRAVIS_BRANCH
+
+usedevelop = true
 
 deps =
     coverage
 
 commands =
     coverage run --source=samplecloud manage.py test -v 2
+    coverage report -m
 
 
 [testenv:docs]
@@ -20,3 +27,10 @@ deps =
     mkdocs
 commands =
     mkdocs build
+
+[testenv:coveralls]
+deps =
+    coverage
+
+commands =
+    coveralls --verbose
