--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py{34,35,36}, docs, coveralls
+envlist = py{34,35,36},docs
 
 [testenv]
 passenv =
@@ -27,10 +27,3 @@ deps =
     mkdocs
 commands =
     mkdocs build
-
-[testenv:coveralls]
-deps =
-    coverage
-
-commands =
-    coveralls --verbose
